<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InSign"
    android:background="@drawable/background">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view_sign_in"
        android:layout_width="140dp"
        android:layout_height="104dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_loading" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="380dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:hint="@string/e_mail"
                    app:boxStrokeWidth="0dp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/c1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:inputType="textEmailAddress"
                       android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/password"
                    app:boxStrokeWidth="0dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/c1"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/c1"
                    tools:ignore="RtlCompat">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:inputType="textPassword"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>



            <Button
                android:id="@+id/btn_in_sign"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dot_t_have_any_account"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_in_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_Up"
                    android:textColor="@color/c1"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:onClick="onClick"/>

            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>